--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-numpy
-Pillow
-streamlit
-Keras==2.4.3
-tensorflow==2.3.1
+streamlit==1.18.1
+Pillow==9.4.0
+keras==2.20.0
+numpy==1.24.3
 matplotlib
